Fix style mapping on mobile device and desktop

--- a/Experiment/style.css
+++ b/Experiment/style.css
@@ -12,8 +12,8 @@ nav {
     border-radius: 5px;
     width: 90%;
     height: 100%;
-    padding: 80px;
-    margin-right: 100px;
+    padding: 40px;
+    margin-right: 500px;
     z-index: 100;
     
 }
@@ -35,7 +35,7 @@ nav ul {
     width: 75px;
     height: 70px;
     border-radius: 50%;
-    margin-right: 10px;
+    margin-right: 20px;
     vertical-align: middle;
     justify-content: left;
     animation: glowing2 5s infinite ease-in-out;
@@ -169,7 +169,8 @@ body {
     color: #003366;
 }
    
-#contact input, #contact textarea {
+#contact input, 
+#contact textarea {
     width: 100%;
     padding: 10px;
     margin: 5px 0 15px 0;
@@ -188,7 +189,8 @@ body {
     cursor: pointer;
     position: relative;
     display: inline-block;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 15px; 
     font-size: 16px;
     z-index: 0;
     gap: 10px;
@@ -282,23 +284,26 @@ section:nth-child(5) { animation-delay: 1s; }
     }
 
     nav img {
-        margin: 0 0 10px 0;
+        margin-left: 65px;
         width: 60px;
     }
 
     nav ul {
         flex-direction: column;
-        gap: 5px;
+        gap: 0px;
         border-radius: 20px;
         padding: 10px 20px;
-        margin-left: 60px;
+        margin-left: 55.5px;
      }
 
     nav li {
-        font-size: 22px;
-    }
+        font-size: 25px;
+        }
 
     nav a {
+        border: solid 3px #003366;
+        border-radius: 7px;
+        padding: 4px 8px;
         color: #002b5c;
         text-decoration: none;
     }
@@ -332,13 +337,19 @@ section:nth-child(5) { animation-delay: 1s; }
         margin-bottom: 2px;
         flex-shrink: 0;
     }
+    
+    #contact .kirim {
+        flex-direction: column; 
+        align-items: center;
+        gap: 10px;
+    }
+
     #contact input, 
-    #contact textarea,
-    #contact button { 
+    #contact textarea{ 
             width: 100%;
     }
-    #contact .kirim {
-        justify-content: space-between;
-        flex-direction: column;
+    #contact button {
+        width: 100%;
+        margin-bottom: 12px; 
     }
 }
